libs/error-stack/tests/snapshots/test_serialize__full__multiple_sources_at_root.snap
---
source: tests/test_serialize.rs
expression: a
---
[
  {
    "context": "root error",
    "attachments": [
      {
        "file": "tests/common/mod.rs",
        "line": 4,
        "column": 5
      },
      {
        "spans": [
          {
            "fields": [],
            "level": "INFO",
            "name": "func_b",
            "target": "test_serialize::common::snapshots",
            "module_path": "test_serialize::common::snapshots",
            "file": "tests/common/snapshots.rs",
            "line": 81,
            "type": "span"
          },
          {
            "fields": [],
            "level": "INFO",
            "name": "func_a",
            "target": "test_serialize::common::snapshots",
            "module_path": "test_serialize::common::snapshots",
            "file": "tests/common/snapshots.rs",
            "line": 86,
            "type": "span"
          }
        ]
      },
      "printable C: 1"
    ],
    "sources": []
  },
  {
    "context": "root error",
    "attachments": [
      {
        "file": "tests/common/mod.rs",
        "line": 4,
        "column": 5
      },
      {
        "spans": [
          {
            "fields": [],
            "level": "INFO",
            "name": "func_b",
            "target": "test_serialize::common::snapshots",
            "module_path": "test_serialize::common::snapshots",
            "file": "tests/common/snapshots.rs",
            "line": 81,
            "type": "span"
          },
          {
            "fields": [],
            "level": "INFO",
            "name": "func_a",
            "target": "test_serialize::common::snapshots",
            "module_path": "test_serialize::common::snapshots",
            "file": "tests/common/snapshots.rs",
            "line": 86,
            "type": "span"
          }
        ]
      },
      "printable C: 2"
    ],
    "sources": []
  }
]
